# sdsclient_c

./: CMakeLists.txt
depends/: b64.cmake  curl.cmake  jsmn.cmake  sdl2.cmake  yaml.cmake
src/: config.c  config.h  json_helper.h  main.c  netapi.c  netapi.h  timepoints.c  timepoints.h
